--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -37,8 +37,9 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.0'
     testImplementation 'junit:junit:4.12'
 
-    annotationProcessor "com.uber.nullaway:nullaway:0.9.6"
-    annotationProcessor "edu.ucr.cs.riple.nullawayannotator:css:1.2.3-LOCAL"
+    annotationProcessor "com.uber.nullaway:nullaway:0.10.2"
+    annotationProcessor "edu.ucr.cs.riple.checkers:ExhaustiveFixSerializer:1.0-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.nullawayannotator:type-annotator-scanner:1.3.4-SNAPSHOT"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
     errorprone "com.google.errorprone:error_prone_core:2.3.2"
@@ -57,8 +58,8 @@ tasks.withType(JavaCompile) {
                                               "-XepOpt:NullAway:AnnotatedPackages=com.github.mikephil.charting",
                                               "-XepOpt:NullAway:SerializeFixMetadata=true",
                                               "-XepOpt:NullAway:FixSerializationConfigPath=/tmp/NullAwayFix/config.xml",
-                                              "-Xep:CSS:ERROR",
-                                              "-XepOpt:CSS:ConfigPath=/tmp/NullAwayFix/css.xml",
+                                              "-Xep:TypeAnnotatorScanner:ERROR",
+                                              "-XepOpt:TypeAnnotatorScanner:ConfigPath=/tmp/NullAwayFix/scanner.xml",
                                               "-XepDisableAllWarnings"]
         options.compilerArgs << "-Xmaxerrs" << "100000"
 
