--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -38,8 +38,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     annotationProcessor "com.uber.nullaway:nullaway:0.10.2"
-    annotationProcessor "edu.ucr.cs.riple.checkers:ExhaustiveFixSerializer:1.0-SNAPSHOT"
     annotationProcessor "edu.ucr.cs.riple.nullawayannotator:type-annotator-scanner:1.3.4-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.checkers:ExhaustiveFixSerializer:1.0-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.checkers:NullUnmarkedCollector:1.0-SNAPSHOT"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
     errorprone "com.google.errorprone:error_prone_core:2.3.2"
@@ -51,20 +52,26 @@ task sourcesJar(type: Jar) {
     classifier = 'sources'
 }
 
-tasks.withType(JavaCompile) {
-    if (!name.toLowerCase().contains("test")) {
-        options.errorprone.errorproneArgs += ["-XepDisableAllChecks",
-                                              "-Xep:NullAway:ERROR",
-                                              "-XepOpt:NullAway:AnnotatedPackages=com.github.mikephil.charting",
-                                              "-XepOpt:NullAway:SerializeFixMetadata=true",
-                                              "-XepOpt:NullAway:FixSerializationConfigPath=/tmp/NullAwayFix/config.xml",
-                                              "-Xep:TypeAnnotatorScanner:ERROR",
-                                              "-Xep:ExhaustiveFixSerializer:OFF",
-                                              "-XepOpt:TypeAnnotatorScanner:ConfigPath=/tmp/NullAwayFix/scanner.xml",
-                                              "-XepDisableAllWarnings"]
-        options.compilerArgs << "-Xmaxerrs" << "100000"
+import net.ltgt.gradle.errorprone.CheckSeverity
 
+tasks.withType(JavaCompile) {
+    // remove the if condition if you want to run NullAway on test code
+    if (!name.toLowerCase().contains("test")) {
+//        options.errorprone.disableAllChecks = true
+//        options.errorprone.disableAllWarnings = true
+        options.errorprone {
+            check("NullAway", CheckSeverity.ERROR)
+            check("TypeAnnotatorScanner", CheckSeverity.ERROR)
+            check("ExhaustiveFixSerializer", CheckSeverity.OFF)
+            check("NullUnmarkedCollector", CheckSeverity.ERROR)
+            option("NullAway:AnnotatedPackages", "com.github.mikephil.charting")
+            option("NullAway:SerializeFixMetadata", "true")
+            option("NullAway:FixSerializationConfigPath", "/tmp/NullAwayFix/nullaway.xml")
+            option("TypeAnnotatorScanner:ConfigPath", "/tmp/NullAwayFix/scanner.xml")
+        }
     }
+    options.compilerArgs << "-Xmaxerrs" << "100000"
+    options.compilerArgs << "-Xmaxwarns" << "100000"
 }
 
 artifacts {
