--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -62,7 +62,7 @@ tasks.withType(JavaCompile) {
         options.errorprone {
             check("NullAway", CheckSeverity.ERROR)
             check("TypeAnnotatorScanner", CheckSeverity.ERROR)
-            check("ExhaustiveFixSerializer", CheckSeverity.OFF)
+            check("ExhaustiveFixSerializer", CheckSeverity.ERROR)
             check("NullUnmarkedCollector", CheckSeverity.ERROR)
             option("NullAway:AnnotatedPackages", "com.github.mikephil.charting")
             option("NullAway:SerializeFixMetadata", "true")
