--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -37,10 +37,9 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.0'
     testImplementation 'junit:junit:4.12'
 
-    annotationProcessor "com.uber.nullaway:nullaway:0.10.2"
-    annotationProcessor "edu.ucr.cs.riple.nullawayannotator:type-annotator-scanner:1.3.4-SNAPSHOT"
-    annotationProcessor "edu.ucr.cs.riple.checkers:ExhaustiveFixSerializer:1.0-SNAPSHOT"
-    annotationProcessor "edu.ucr.cs.riple.checkers:NullUnmarkedCollector:1.0-SNAPSHOT"
+
+    annotationProcessor "com.uber.nullaway:nullaway:0.10.8"
+    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-4-SNAPSHOT"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
     errorprone "com.google.errorprone:error_prone_core:2.3.2"
@@ -57,17 +56,15 @@ import net.ltgt.gradle.errorprone.CheckSeverity
 tasks.withType(JavaCompile) {
     // remove the if condition if you want to run NullAway on test code
     if (!name.toLowerCase().contains("test")) {
-//        options.errorprone.disableAllChecks = true
+        options.errorprone.disableAllChecks = true
 //        options.errorprone.disableAllWarnings = true
         options.errorprone {
             check("NullAway", CheckSeverity.ERROR)
-            check("TypeAnnotatorScanner", CheckSeverity.ERROR)
-            check("ExhaustiveFixSerializer", CheckSeverity.ERROR)
-            check("NullUnmarkedCollector", CheckSeverity.ERROR)
+            check("AnnotatorScanner", CheckSeverity.ERROR)
             option("NullAway:AnnotatedPackages", "com.github.mikephil.charting")
             option("NullAway:SerializeFixMetadata", "true")
             option("NullAway:FixSerializationConfigPath", "/tmp/NullAwayFix/nullaway.xml")
-            option("TypeAnnotatorScanner:ConfigPath", "/tmp/NullAwayFix/scanner.xml")
+            option("AnnotatorScanner:ConfigPath", "/tmp/NullAwayFix/scanner.xml")
         }
     }
     options.compilerArgs << "-Xmaxerrs" << "100000"
