--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
 
     annotationProcessor "com.uber.nullaway:nullaway:0.10.8"
-    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-4-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-6"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
     errorprone "com.google.errorprone:error_prone_core:2.3.2"
@@ -60,11 +60,11 @@ tasks.withType(JavaCompile) {
 //        options.errorprone.disableAllWarnings = true
         options.errorprone {
             check("NullAway", CheckSeverity.ERROR)
-            check("AnnotatorScanner", CheckSeverity.ERROR)
+            check("AnnotatorScanner", CheckSeverity.OFF)
             option("NullAway:AnnotatedPackages", "com.github.mikephil.charting")
-            option("NullAway:SerializeFixMetadata", "true")
-            option("NullAway:FixSerializationConfigPath", "/tmp/NullAwayFix/nullaway.xml")
-            option("AnnotatorScanner:ConfigPath", "/tmp/NullAwayFix/scanner.xml")
+            option("NullAway:SerializeFixMetadata", "false")
+            option("NullAway:FixSerializationConfigPath", "/tmp/annotator/nullaway.xml")
+            option("AnnotatorScanner:ConfigPath", "/tmp/annotator/scanner.xml")
         }
     }
     options.compilerArgs << "-Xmaxerrs" << "100000"
