--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -39,11 +39,12 @@ dependencies {
 
 
     annotationProcessor "com.uber.nullaway:nullaway:0.10.8"
-    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-5"
+    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-6"
 
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
     errorprone "com.google.errorprone:error_prone_core:2.3.2"
     errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
+    compileOnly "com.uber.nullaway:nullaway-annotations:0.10.10"
 }
 
 task sourcesJar(type: Jar) {
